# EnvCP

./: .gitignore  .npmignore  .signing-test  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SETUP.md  VERIFICATION.md  VERSION  codecov.yml  eslint.config.js  jest.config.js  junit.xml  mint.json  multiple.intoto.jsonl  package-lock.json  package.json  server.json  sonar-project.properties  tsconfig.json
.claude-plugin/: marketplace.json
.github/: .coderabbit.yaml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: canary.yml  ci.yml  codeql.yml  label-check.yml  publish-new.yml  publish-pypi.yml  publish.yml  sandbox.yml  semgrep.yml  slsa.yml  sonarcloud.yml  stale.yml  sync-wiki.yml  tag-protection.yml  test-trigger.yml  welcome.yml
__tests__/: adapter-array-header.test.ts  adapters-gemini.test.ts  adapters-openai.test.ts  adapters-rest.test.ts  adapters.test.ts  api-key-enforcement.test.ts  base-adapter.test.ts  base-sync.test.ts  base-timeout.test.ts  cli-add-input.test.ts  cli-init-reinit.test.ts  cli-log-path.test.ts  cli-rule.test.ts  cli-vault.test.ts  config-guard.test.ts  config-hmac.test.ts  config-loading.test.ts  config-manager.test.ts  config.test.ts  coverage-adapters.test.ts  coverage-audit.test.ts  crypto-recovery.test.ts  crypto.test.ts  envcp-logs-tool.test.ts  envcp_run.test.ts  hsm.test.ts  http-server.test.ts  http.test.ts  keychain.test.ts  lock.test.ts  lockout.test.ts  log-integrity.test.ts  log-path.test.ts  mcp-server.test.ts  mcp-start.test.ts  notifications.test.ts  prompt.test.ts  protected-variable.test.ts  rest-lockout.test.ts  secure-memory-fallback.test.ts  (+16 more)
__tests__/sandbox/: CIS-README.md  Dockerfile  docker-compose.yml  package-lock.json  package.json  sandbox-runner.js
__tests__/utils/: prompt.test.ts
cloudflare/: package.json  tsconfig.json  worker.ts  wrangler.toml
crates/envcp-core/: Cargo.toml
crates/envcp-core/src/: crypto.rs  error.rs  lib.rs  storage.rs
crates/envcp-core/tests/: crypto_tests.rs  storage_tests.rs
crates/envcp-node/: Cargo.toml  package.json
crates/envcp-node/src/: lib.rs
crates/envcp-python/: Cargo.toml  pyproject.toml
crates/envcp-python/python/envcp/: __init__.py
crates/envcp-python/src/: lib.rs
docker/: .dockerignore  Dockerfile
docs/: ASSISTANT.md  CRYPTO-AUDIT.md  SECURITY_GUIDE.md  THREAT_MODEL.md  docs.json  index.mdx  installation.mdx  quick-start.mdx  release-channels.md
docs/advanced/: session-management.mdx  troubleshooting.mdx
docs/api-reference/: endpoints.mdx
docs/cli-reference/: commands.mdx
docs/configuration/: reference.mdx
docs/i18n/: README.es.md  README.fr.md  README.ja.md  README.ko.md  README.vi.md  README.zh.md  SETUP.es.md  SETUP.fr.md  SETUP.ja.md  SETUP.ko.md  SETUP.vi.md  SETUP.zh.md  VERIFICATION.es.md  VERIFICATION.fr.md  VERIFICATION.ja.md  VERIFICATION.ko.md  VERIFICATION.vi.md  VERIFICATION.zh.md
docs/integrations/: gemini.mdx  local-llm.mdx  mcp.mdx  openai.mdx
docs/security/: best-practices.mdx
envcp-python/: README.md  pyproject.toml
envcp-python/envcp/: __init__.py
plugins/envcp/: .mcp.json  server.js
python/: README.md  pyproject.toml
python/envcp/: __init__.py  cli.py
scripts/: convert-wiki.sh  install.sh  postinstall.js  sync-version.js
src/: index.ts  types.ts  version.ts
src/adapters/: base.ts  (+5 more)
wiki-content/: API-Reference.md  CLI-Reference.md  Configuration-Reference.md  Gemini-Integration.md  Home.md  Installation.md  Local-LLM-Integration.md  MCP-Integration.md  OpenAI-Integration.md  Quick-Start-Guide.md  README.md  Release-Notes-v1.2.0.md  Security-Best-Practices.md  Session-Management.md  Troubleshooting.md
(+30 files in other folders)
