[package]
name = "envcp-node"
version = "1.2.0-exp.6ca9c2b"
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
envcp-core = { path = "../envcp-core" }
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
