[package]
name = "envcp-node"
version = "1.2.1"
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
envcp-core = { path = "../envcp-core" }
napi = { version = "2", features = ["napi4"] }
napi-derive = "3"
serde_json = "1"

[build-dependencies]
napi-build = "2"
