[package]
name = "envcp-python"
version = "1.2.0-exp.6ca9c2b"
edition = "2021"
license-file = "../../LICENSE"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
envcp-core = { path = "../envcp-core" }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
serde_json = "1"
